[package]
name = "inside-vm_arch_support"
version = "0.3.0"
authors = ["PicoJr <picojr_dev@gmx.com>", "Talhah Patelia <talhah1911@gmail.com>"]
edition = "2015"
repository = "https://github.com/Talhahpatelia/inside-vm_arch_support"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vm", "detect", "timing"]
description = "detect virtual machine using timing"
include = ["src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "test-inside-vm"

[profile.release]
debug = true
